<resources>
    <string name="app_name">Gensys Music</string>
    <string name="settings">Settings</string>
    <string name="display_settings">Display Settings</string>
    <string name="select_theme">Select Theme</string>
    <string name="album_art">Album Art</string>
    <string name="back_button">back button</string>
    <string name="more">More</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="songs">Songs</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="music">Music</string>
    <string name="edit">Edit</string>
    <string name="add_cover_image">Add Cover Image</string>
    <string name="playlist_name">Playlist name</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="shuffle">shuffle</string>
    <string name="genesis">Gensys</string>
    <string name="no_content">No Content</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="playlists_require_names_give_your_playlist_a_name">Playlists require names, give your playlist a name</string>
    <string name="update_playlist">Update Playlist</string>
    <string name="update">Update</string>
    <string name="update_successful">Update was successful</string>
    <string name="update_your_playlist_information">Update your playlist information</string>
    <string name="search_here">Search here</string>
    <string name="delete">Delete</string>
    <string name="add_to_playlist">Add To Playlist</string>
    <string name="info">Info</string>
    <string name="modify">Modify</string>
    <string name="share">Share</string>
    <string name="view_album">View Album</string>
    <string name="view_artist">View Artist</string>
    <string name="title">Title</string>
    <string name="artist_songs">Artist Songs</string>
    <string name="album_songs">Album Songs</string>
    <string name="null_values">Error: Please enter full details</string>
    <string name="title_asc">Title Ascending</string>
    <string name="title_desc">Title Descending</string>
    <string name="date_asc">Date Ascending</string>
    <string name="date_desc">Date Descending</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="clear_all_playlist">Clear All Playlist</string>
    <string name="clear_all">Clear All</string>
    <string name="select_playlist">Select Playlist</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow System</string>
    <string name="filter">Category</string>
    <string name="duration_sec">Duration (sec)</string>
    <string name="_0">0</string>
    <string name="_120">120</string>
    <string name="_60">60</string>
    <string name="reload">Reload content when you are done</string>
    <string name="play">Play</string>
    <string name="queue">Queue</string>
    <string name="about">About</string>
    <string name="statistics">Statistics</string>
    <string name="play_history">Play History</string>
    <string name="top_50_songs">Most Played Songs - Top 50</string>
    <string name="play_count">Play Count</string>
    <string name="song_statistics">Song Statistics</string>
    <string name="available_on_device">Available on device</string>
    <string name="last_played_on">Last played on</string>
    <string name="duration">Duration</string>
    <string name="_00_00">00:00</string>
    <string name="background_type">Background Type</string>
    <string name="none">None</string>
    <string name="play_all">PLAY ALL</string>
    <string name="_3_column_s">3 Column(s)</string>
    <string name="_2_column_s">2 Column(s)</string>
    <string name="local">Local</string>
    <string name="other">Other</string>
    <string name="total">Total:</string>
    <string name="now_playing">Now Playing</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="tracks">Tracks</string>
    <string name="tracks_">Tracks: </string>
    <string name="playlist_songs">Playlist Songs</string>
    <string name="dee">Dee</string>
    <string name="zer">zer</string>
    <string name="top_songs_on_deezer">Top 100 songs on deezer</string>
    <string name="top_albums_on_deezer">Top 100 albums on deezer</string>
    <string name="top_artists_on_deezer">Top 100 artists on deezer</string>
    <string name="online">Online</string>
    <string name="explicit">Explicit</string>
    <string name="preview">Preview</string>
    <string name="want_the_full_song">Want the full song?</string>
    <string name="get_deezer">Get Deezer</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="search_results">Search Results</string>
    <string name="top_songs">Top Songs</string>
    <string name="skip_next">Skip Next</string>
    <string name="skip_prev">Skip Prev</string>
    <string name="adaptive_image">Adaptive Image</string>
    <string name="adaptive_image_blurred">Adaptive Image Blurred</string>
    <string name="gif">Gif</string>
    <string name="player_background">Player Background</string>
    <string name="volume_settings">Volume Settings</string>
    <string name="preeq_gain">Pre Eq Gain</string>
    <string name="compressor">Compressor</string>
    <string name="posteq_gain">Post Eq Gain</string>
    <string name="limiter">Limiter</string>
    <string name="enable_audio_fx">Enable Audio Fx</string>
    <string name="extra_volume">Extra Volume</string>
    <string name="audio_filter">Audio Filter</string>
    <string name="v2_0_0">v2.0.1</string>
    <string name="lebogang_bantsijang">Lebogang Bantsijang</string>
    <string name="rate_app">Rate</string>
    <string name="welcome">Welcome</string>
    <string name="home">Home</string>
    <string name="music_access">Music Access</string>
    <string name="email">lebogangbantsijng@gmail.com</string>
    <string name="menu">menu</string>
    <string name="trending">Trending</string>
    <string name="top_albums">Top Albums</string>
    <string name="top_artists">Top Artists</string>
    <string name="no_playlists">No Playlists</string>
    <string name="image">Image</string>
    <string name="local_content">Local Content</string>
    <string name="username">Username</string>
    <string name="recent_added">Recently Added</string>
    <string name="history">History</string>
    <string name="suggestions">Suggestions</string>
    <string name="genres">Genres</string>
    <string name="favourite">Favourite</string>
    <string name="user_details">User details</string>
    <string name="display_name">Display Name</string>
    <string name="get_image">Get Image</string>
    <string name="please_a_valid_name">Please a valid name</string>
    <string name="saved">Saved</string>
    <string name="contributing_artists">Contributing Artists</string>
    <string name="albums_by_artist">Albums By Artist</string>
    <string name="charts">Charts</string>
    <string name="deezer">Deezer</string>
    <string name="top_on_deezer">Top On Deezer</string>
    <string name="network_error">Network Error</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="play_now">Play now</string>
    <string name="added_to_favourites">Added to favourites</string>
    <string name="size">Size</string>
    <string name="year">Year</string>
    <string name="is_favourite">Is favourite</string>
    <string name="unknown">Unknown</string>
    <string name="top_on_itunes">Top On Itunes</string>
    <string name="genre">Genre</string>
    <string name="spotify">Spotify</string>
    <string name="new_releases">New Releases</string>
    <string name="preview_only">Preview Only</string>
    <string name="spot">Spot</string>
    <string name="ify">ify</string>
    <string name="latest_releases">Latest releases (Globally)</string>
    <string name="add">Add</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_updated">Playlist Updated</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="playlist_deleted">Playlist Deleted</string>
    <string name="update_create_a_playlist">Update/Create a playlist</string>
    <string name="select_items">Select Items</string>
    <string name="all">All</string>
    <string name="items_added">Items Added</string>
    <string name="items_removed">Items Removed</string>
    <string name="item_update">Item Update</string>
    <string name="lyrics">Lyrics</string>
    <string name="no_lyrics">No Lyrics</string>
    <string name="top_tracks_played_previewed">Top tracks played/previewed</string>
    <string name="_new">New</string>
    <string name="stream">Stream</string>
    <string name="last_50_songs_played">Last 50 Songs Played (Local)</string>
    <string name="details">Details</string>
    <string name="release_date">Release Date</string>
    <string name="type">Type</string>
    <string name="release_date_">Release Date: </string>
    <string name="customize_message">This does not change the song\'s meta data. We simply display a gif in place of the usual cover art</string>
    <string name="customize_title">Customise the display image?</string>
    <string name="categories">Categories</string>
    <string name="your_favourite_artists">Your favourite artists</string>
    <string name="featured_playlists">Featured playlists</string>
    <string name="symbol">-</string>
    <string name="your_favourite_albums">Your favourite albums</string>
    <string name="related_albums">Related Albums</string>
    <string name="user">User</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="permission_error">Permission Error</string>
    <string name="permission_error_message">The app needs to read your media files</string>
    <string name="grant">Grant</string>
    <string name="login_failed">Login Failed</string>
    <string name="sign_in_message">You need to sign in to be able to use this section</string>
    <string name="restricted">Restriced Access</string>
    <string name="cancel">Cancel</string>
    <string name="input_your_details">Input your details</string>
    <string name="email_address">Email Address</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number (+27...)</string>
    <string name="verification_code">Verification Code</string>
    <string name="request_code">Request Code</string>
    <string name="add_favourites">Add Favourites</string>
    <string name="featured">Featured</string>
    <string name="_01_00">01:00</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_in">Login In</string>
    <string name="create_new">Create New</string>
    <string name="check_your_details">Failed, Check your details</string>
    <string name="verification_error">Verification Error</string>
    <string name="verify_number_error_message">Unable to verify your number. Please check your number or ensure you have network coverage</string>
    <string name="okay">Okay</string>
    <string name="invalid_code">Please enter a valid verification code.</string>
    <string name="reset_password">Reset Password</string>
    <string name="please_remember_your_password">Please remember your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_link_will_be_sent_to">Reset link will be sent to:</string>
    <string name="request_link">Request Link</string>
    <string name="email_sent_to">"Email sent to: "</string>
    <string name="failed_to_send_email">Failed to send email</string>
</resources>