<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021. - Lebogang Bantsijang
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.local.SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        app:title="@string/search"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_corners_drawable"
        android:backgroundTint="?colorButtonNormal"
        android:drawableStart="@drawable/ic_round_search_24"
        android:drawablePadding="6dp"
        android:hint="@string/search_here"
        android:inputType="text"
        android:padding="12dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:ignore="Autofill" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/search_results"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/nowPlaying"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?selectableItemBackground"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/music_drawable" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:text="@string/app_name"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="1"
            android:padding="6dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textStyle="bold"
            android:scrollHorizontally="true"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="?selectableItemBackground"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_play_ios"
            app:tint="?colorControlNormal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>